# grammar

./: Cargo.toml  README.md
benches/: compare.py  example.rs  grammalect.py
examples/: conjugeur.rs  lib.rs  searchbar.rs  textarea.rs
src/: _main.rs  lib.rs
src/textformater/: fr.rs  mod.rs
src/tokenizer/: fr.rs
static/: script.js
templates/: index.html.tera
